idk I decided to fix this

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.17)
-project(mapHash)
+project(_hashmap)
 
 set(CMAKE_CXX_STANDARD 14)
+include_directories(include)
 
-add_executable(mapHash main.cpp HashMap.cpp HashMap.h)
+add_library(_hashmap SHARED src/hashmap/Hashmap.cpp)
